<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/planetenorbitname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patmoAtext"
        android:text="@string/grosseHalbachse" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/porbitA" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patmoEtext"
        android:text="@string/Eexzentrizit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/porbitE" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patmoitext"
        android:text="@string/iinklination" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/porbiti" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patmovtext"
        android:text="@string/vgeschwidnigkeit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/porbitv" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Apohel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:text="@string/Perihel"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_row="0"
            android:layout_column="2" />

    </GridLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/porbitapohel"
            android:layout_row="1"
            android:layout_column="0" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/porbitperihel"
        android:layout_row="1"
        android:layout_column="1" />
    </GridLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Apogaeum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6b"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:text="@string/Perigaeum"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7b"
            android:layout_row="0"
            android:layout_column="2"
            />

    </GridLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/porbitapogaeum"
            android:layout_row="1"
            android:layout_column="0" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/porbitperigaeum"
            android:layout_row="1"
            android:layout_column="1" />
    </GridLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patmositext"
        android:text="@string/siderischeumlaufzeit" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/porbitsiderisch" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patmosytext"
        android:text="@string/SynodischeUmlaufzeit" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/porbitsynodisch" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:text="@string/Zurueck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bzurueckorbitdaten"
        android:layout_row="0"
        android:layout_column="5" /></GridLayout>


</LinearLayout></ScrollView>